[package]
name = "cert-storage-inspector"
version = "0.1.0"
authors = ["Dana Keeler <mozkeeler@gmail.com>"]
edition = "2018"

[dependencies]
base64 = "0.10"
byteorder = "1.2.7"
clap = {version = "2.33", features = ["yaml"]}
curl = "^0.4"
lmdb-rkv = "0.11"
rkv = "^0.9"
serde_json = "1.0"
sha2 = "0.8.0"
